[tool.poetry]
name = "asyncmongo"
version = "0.1.0"
description = "A pure async pymongo alternative"
authors = ["Roshan R Chandar <roshanr2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
